--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src"
   },
   "dependencies": {
+    "bent": "^7.3.7",
     "vue": "^3.0.0-rc.1",
     "vue-router": "next"
   },
