--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "dev:functions": "netlify-lambda serve ./functions",
     "build": "vite build",
+    "build:functions": "netlify-lambda build ./functions",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ./src",
     "lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src"
   },
@@ -25,6 +27,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "lodash": "^4.17.19",
+    "netlify-lambda": "^2.0.1",
     "postcss-nested": "^4.2.3",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
