--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  functions = "./functions/built"
-  publish="./dist"
+  functions = "./functions"
+  publish="dist"
   command="yarn build"
