--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "dev:functions": "netlify-lambda serve ./functions",
+    "dev:functions": "netlify-lambda serve ./src/functions",
     "build": "vite build",
-    "build:functions": "netlify-lambda build ./functions",
+    "build:functions": "netlify-lambda build ./src/functions",
+    "build:functions-install": "netlify-lambda install ./src/functions",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ./src",
     "lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src"
   },
