--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "bent": "^7.3.7",
     "vue": "^3.0.0-rc.1",
-    "vue-router": "next"
+    "vue-router": "next",
+    "vuex": "next",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.2.0",
