--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:functions": "netlify-lambda build ./src/functions",
     "build:functions-install": "netlify-lambda install ./src/functions",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ./src",
-    "lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src"
+    "lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src",
+    "env": "yarn node ./scripts/generateEnv.js"
   },
   "dependencies": {
     "bent": "^7.3.7",
@@ -23,6 +24,7 @@
     "@vue/compiler-sfc": "^3.0.0-rc.1",
     "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
