--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "vite",
     "dev:functions": "netlify-lambda serve ./src/functions",
     "build": "vite build",
+    "build:ci": "yarn env && yarn build:functions-install && yarn build:functions && yarn build",
     "build:functions": "netlify-lambda build ./src/functions",
     "build:functions-install": "netlify-lambda install ./src/functions",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ./src",
