feat: update vite (v1.0.0-rc.1 -> v7.1.14), update all deps for compat, update netlify config

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 	publish = "dist"
-	command = "yarn build:ci"
+	command = "npm run build"
 	functions = "./functions"
 
 [build.processing]
