--- a/package.json
+++ b/package.json
@@ -1,51 +1,36 @@
 {
   "name": "when",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "dev:functions": "netlify-lambda serve ./src/functions",
+    "dev": "netlify dev",
+    "develop": "vite",
     "build": "vite build",
-    "build:ci": "yarn env && yarn build:functions-install && yarn build:functions && yarn build",
-    "build:functions": "netlify-lambda build ./src/functions",
-    "build:functions-install": "netlify-lambda install ./src/functions",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ./src",
-    "lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore --fix ./src",
-    "env": "yarn node ./scripts/generateEnv.js"
+    "preview": "vite preview",
+    "lint": "prettier-eslint"
   },
   "dependencies": {
-    "bent": "^7.3.9",
-    "vue": "^3.0.0-rc.1",
-    "vue-router": "next",
-    "vuex": "next",
-    "vuex-persist": "^2.2.0"
+    "@tailwindcss/vite": "^4.1.15",
+    "bent": "^7.3.12",
+    "tailwindcss": "^4.1.15",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3",
+    "vuex": "^4.1.0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.2.0",
-    "@tailwindcss/ui": "^0.4.0",
-    "@vue/compiler-sfc": "^3.0.0-rc.1",
-    "autoprefixer": "^9.8.5",
-    "babel-eslint": "^10.1.0",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.5.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-vue": "next",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "lodash": "^4.17.19",
-    "netlify-lambda": "^2.0.1",
-    "postcss-nested": "^4.2.3",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.0.5",
-    "tailwindcss": "^1.6.2",
-    "vite": "^1.0.0-rc.1"
+    "@eslint/js": "^9.38.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^10.5.1",
+    "globals": "^16.4.0",
+    "netlify-cli": "^23.9.3",
+    "prettier-eslint": "^16.4.2",
+    "prettier-eslint-cli": "^8.0.1",
+    "vite": "npm:rolldown-vite@7.1.14"
   },
-  "lint-staged": {
-    "src/*.{js,vue}": "yarn lint"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "overrides": {
+    "vite": "npm:rolldown-vite@7.1.14"
   }
 }
